--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,46 @@
     margin: 0; 
 }
 
+.container {
+       display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(20, auto);
+    place-items: center;
+
+       background-color: rgb(237, 237, 241);
+      padding: 2em;
+      box-shadow: 0px 5px 5px black;
+      max-width: 1512px;
+}
+
+h1 {
+    margin-top: 8%;
+    margin-bottom: 5%;
+}
+
+ h2 {
+   
+    margin-bottom: 5%;
+}
+
+section {
+    background-color: rgb(138, 206, 206);
+    padding: 5%;
+
+    margin-bottom: 5%;
+
+    border: 1px solid;
+    /* display: flex; */
+  align-items: center;
+}
+
+form {
+    margin: auto;
+    text-align: center;
+    
+}
+
+
 /*huvudmeny*/
 .headmenu {
   
@@ -86,4 +126,43 @@ td {
 
     
 }
+
+
+
+input {
+    margin-bottom: 5%;
+}
+
+textarea{
+     margin-bottom: 5%;
+}
+
+.position1{
+    grid-area: 1/1/2/-1;
+   
+}
+.position2{
+    grid-area: 2/1/3/-1;
+}
+
+.position3{
+    grid-area: 3/1/4/-1;
+}
+
+.position4{
+    grid-area: 4/1/5/-1;
+}
+
+.position5{
+    grid-area: 5/1/6/-1;
+}
+
+.position6{
+    grid-area: 6/1/7/-1;
+}
+
+.position100{
+    grid-area: 14/1/15/-1;
+}
+
 
